--- a/k8s/human-resources.yaml
+++ b/k8s/human-resources.yaml
@@ -10,6 +10,7 @@ metadata:
     app.kubernetes.io/component: application
     app.kubernetes.io/part-of: human-resource
     app.kubernetes.io/managed-by: kubectl
+    istio-injection: enabled
 ---
 apiVersion: v1
 kind: Service
@@ -44,7 +45,6 @@ metadata:
     app.kubernetes.io/component: application
     app.kubernetes.io/part-of: human-resource
     app.kubernetes.io/managed-by: kubectl
-    #istio-injection: enabled
 spec:
   replicas: 1
   selector:
@@ -60,8 +60,8 @@ spec:
         app.kubernetes.io/component: application
         app.kubernetes.io/part-of: human-resource
         app.kubernetes.io/managed-by: kubectl
-      annotations:
-        sidecar.istio.io/inject: "true"
+      #annotations:
+        #sidecar.istio.io/inject: "true"
     spec:
       containers:
         - name: human-resources
