--- a/kind/install-istio.yaml
+++ b/kind/install-istio.yaml
@@ -56,6 +56,9 @@ spec:
   meshConfig:
     accessLogFile: "/dev/stdout"
     accessLogEncoding: "JSON"
+    defaultConfig:
+      tracing:
+        sampling: 100
   values:
     cni:
       excludeNamespaces:
